--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,32 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    /* animation: App-logo-spin infinite 20s linear; */
+    border: 3px solid #44c9e0;
   }
+}
+
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #4CAF50;
+}
+
+.myDiv {
+  border: 5px outset rgb(116, 130, 207);
+  background-color: rgb(69, 123, 141);
+  text-align: center;
+}
+.myDiv2 {
+  border: 5px outset rgb(116, 130, 207);
+  background-color: rgb(69, 123, 141);
+  text-align: center;
 }
 
 .App-header {
